Java symbols and token scanning is complete

--- a/src/3/javatest.in
+++ b/src/3/javatest.in
@@ -18,3 +18,15 @@ What?
 
 // Character tokens
 'x' 'A' '\'' 'a' '\n' '\t' '\\'
+
+// String tokens
+"Hello, world."
+"Hello,\tworld!"
+"Hello,\n\"world!\""
+"It's Friday!"
+""  "\""
+
+// Special symbol tokens
++ - * / := . , ; : = <> < <= >= > ( ) [ ] { } } ^ ..
+<<=  >>=
+:=<>=<==>>===
