#14 Wrapping up JasminEmitter, #16 Rewriting intermediate modules

--- a/pickle/SConstruct
+++ b/pickle/SConstruct
@@ -66,6 +66,7 @@ CPPPATH = Flatten([
     get_all_subdirectories("antlr4-runtime"),
     "src", 
     "src/wci",
+    get_all_subdirectories("src/to-be-integrated"),
     "generated",
 ])
 
